Closed Bug 1320697 Opened 8 years ago Closed 8 years ago

Wrong assertion in jsscript.cpp: MOZ_ASSERT(!srcFun->isAsync());

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox-esr45 --- unaffected
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: arai, Assigned: arai)

References

Details

Attachments

(2 files)

CloneInnerInterpretedFunction is called on unwrapped function, that is just a generator at that point, and it can be cloned without any issue.

also, we need to clone unwrapped function if it appears in XUL.
So, the assertion just need to be removed.
Just removed the wrong assertion in CloneInnerInterpretedFunction,
and added testcase for cloneAndExecuteScript.
Assignee: nobody → arai.unmht
Status: NEW → ASSIGNED
Attachment #8814937 - Flags: review?(till)
Comment on attachment 8814937 [details] [diff] [review]
Remove wrong assertion in jsscript.cpp.

Review of attachment 8814937 [details] [diff] [review]:
-----------------------------------------------------------------

Makes sense.
Attachment #8814937 - Flags: review?(till) → review+
Thank you for reviewing :D
https://hg.mozilla.org/mozilla-central/rev/1b68b4d00610
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Approval Request Comment
> [Feature/Bug causing the regression]
bug 1185106

> [User impact if declined]
no user impact
automated test with debug build may hit this wrong assertion when a patch that uses async function is backported to the branch

> [Is this code covered by automated tests?]
yes

> [Has the fix been verified in Nightly?]
yes

> [Needs manual test from QE? If yes, steps to reproduce]
no

> [List of other uplifts needed for the feature/fix]
none

> [Is the change risky?]
no

> [Why is the change risky/not risky?]
just removed wrong assertion and has no effect on non-debug build

> [String changes made/needed]
none
Attachment #8815651 - Flags: review+
Attachment #8815651 - Flags: approval-mozilla-aurora?
Comment on attachment 8815651 [details] [diff] [review]
(mozilla-aurora) Remove wrong assertion in jsscript.cpp. r=till

remove wrong assert for debug builds, aurora52+
Attachment #8815651 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: