Bug 1320697 - Remove wrong assertion in jsscript.cpp. r=till